--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "angular-study",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +16,9 @@
   },
   "homepage": "https://github.com/sooyoung32/angular-study#readme",
   "dependencies": {
+    "body-parser" : "^1.14.2",
     "express": "^4.13.3",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
