--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-study",
+  "name": "bower install",
   "version": "0.0.0",
   "homepage": "https://github.com/sooyoung32/angular-study",
   "authors": [
@@ -16,10 +16,13 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "public/components"
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
     "angular": "~1.4.8"
-  }
+  },
+  "main": "",
+  "moduleType": []
 }
