--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-route": "~1.4.8"
   },
   "main": "",
   "moduleType": []
